--- a/settings.gradle
+++ b/settings.gradle
@@ -18,4 +18,4 @@ rootProject.name = "Raion UI Kit"
 include ':app'
 include ':raiontoast'
 include ':raionsnackbar'
-include ':raionratingstar'
+//include ':raionratingstar'
