Changed project name to Raion-UI-Kit due to limitation of maven identifier to identify additional characters

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,7 +14,7 @@ dependencyResolutionManagement {
         maven { url 'https://jitpack.io' }
     }
 }
-rootProject.name = "Raion UI Kit"
+rootProject.name = "Raion-UI-Kit"
 include ':app'
 include ':raiontoast'
 include ':raionsnackbar'
