Ready to deploy on 1.1.0 version

--- a/jitpack.yml
+++ b/jitpack.yml
@@ -3,4 +3,5 @@ jdk:
 install:
   - ./gradlew :raionsnackbar:build :raionsnackbar:publishToMavenLocal -x :raionsnackbar:test
   - ./gradlew :raiontoast:build :raiontoast:publishToMavenLocal -x :raiontoast:test
+  - ./gradlew :raiondialog:build :raiondialog:publishToMavenLocal -x :raiondialog:test
   - find . -name "*.aar"
